[gd_scene load_steps=14 format=3 uid="uid://by48bsueosbie"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_y0t7h"]
[ext_resource type="Texture2D" uid="uid://d2xk07mfuduom" path="res://assets/ui/pause_icon.png" id="2_xhgqg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ich3v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5p5qb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s0ssc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rfg5n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_poqib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yhln"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6k2g6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qu4qx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u861s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2mmu3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gsl8r"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_y0t7h")

[node name="PauseBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -122.5
offset_right = 120.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -151.5
offset_right = 151.5
offset_bottom = 97.0
grow_horizontal = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -146.0
offset_right = 84.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseBackground/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="OptionsButton" type="Button" parent="PauseBackground/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="PauseBackground/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50

[node name="PauseButton" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ich3v")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5p5qb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s0ssc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rfg5n")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_poqib")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5yhln")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6k2g6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_qu4qx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u861s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2mmu3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gsl8r")
icon = ExtResource("2_xhgqg")

[connection signal="pressed" from="PauseBackground/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseBackground/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseBackground/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PauseButton" to="." method="_on_pause_button_pressed"]
